--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <html>
   <head>
     <title>Instascan &ndash; Demo</title>
-    <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/webrtc-adapter/3.3.3/adapter.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.1.10/vue.min.js"></script>
     <script type="text/javascript" src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
+    <style>
+      .videoBlock {
+        width: 100vw;
+        height: 100vh;
+      }
+    </style>
   </head>
   <body>
     <div id="app">
       <div class="sidebar">
-        <section class="cameras">
+        <!--<section class="cameras">
           <h2>Cameras</h2>
           <ul>
             <li v-if="cameras.length === 0" class="empty">No cameras found</li>
@@ -21,7 +25,7 @@
               </span>
             </li>
           </ul>
-        </section>
+        </section>-->
         <section class="scans">
           <h2>Scans</h2>
           <ul v-if="scans.length === 0">
@@ -33,7 +37,7 @@
         </section>
       </div>
       <div class="preview-container">
-        <video id="preview"></video>
+        <video id="preview" class="videoBlock"></video>
       </div>
     </div>
     <script type="text/javascript" src="app.js"></script>
