--- a/index.html
+++ b/index.html
@@ -1,45 +1,48 @@
 <html>
   <head>
+	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <title>Instascan &ndash; Demo</title>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/webrtc-adapter/3.3.3/adapter.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.1.10/vue.min.js"></script>
     <script type="text/javascript" src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
     <style>
-      .videoBlock {
-        width: 100vw;
-        height: 100vh;
-      }
+		* {
+			margin: 0;
+			padding: 0;
+		}
+       .preview-container, #preview {
+         	width: 100vw;
+         	height: 100vh;
+		   transform: scaleX(1)!important;
+       }
+		.scans {
+			position: fixed;
+			z-index: 99999999;
+			height: 100px;
+			width: 100vw;
+			top: 0;
+			left: 0;
+			text-align: center;
+			background: green;
+			color: white;
+			font-size: 4em;
+		}
     </style>
   </head>
   <body>
     <div id="app">
-      <div class="sidebar">
-        <!--<section class="cameras">
-          <h2>Cameras</h2>
-          <ul>
-            <li v-if="cameras.length === 0" class="empty">No cameras found</li>
-            <li v-for="camera in cameras">
-              <span v-if="camera.id == activeCameraId" :title="formatName(camera.name)" class="active">{{ formatName(camera.name) }}</span>
-              <span v-if="camera.id != activeCameraId" :title="formatName(camera.name)">
-                <a @click.stop="selectCamera(camera)">{{ formatName(camera.name) }}</a>
-              </span>
-            </li>
-          </ul>
-        </section>-->
         <section class="scans">
-          <h2>Scans</h2>
           <ul v-if="scans.length === 0">
-            <li class="empty">No scans yet</li>
+            <li class="empty">Сканирование</li>
           </ul>
           <transition-group name="scans" tag="ul">
             <li v-for="scan in scans" :key="scan.date" :title="scan.content">{{ scan.content }}</li>
           </transition-group>
         </section>
-      </div>
       <div class="preview-container">
-        <video id="preview" class="videoBlock"></video>
+        <video id="preview"></video>
       </div>
     </div>
-    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="qrScan.js"></script>
   </body>
 </html>
